--- a/index.html
+++ b/index.html
@@ -5,7 +5,98 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
         <script src="script.js" defer></script>
+        <link
+            rel="icon"
+            href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧮</text></svg>"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+            integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
         <title>Calculator</title>
     </head>
-    <body></body>
+    <body>
+        <header>
+            <h1>CALCULATOR</h1>
+        </header>
+        <main>
+            <div class="calculator-container">
+                <div class="screen">
+                    <div class="last-result">12 + 12</div>
+                    <div class="current-result">=24</div>
+                </div>
+                <div class="buttons-container">
+                    <div class="col">
+                        <div class="row">
+                            <button class="btn">AC</button>
+                            <button class="btn">C</button>
+                            <button class="btn">%</button>
+                        </div>
+                        <div class="row">
+                            <button class="btn">7</button>
+                            <button class="btn">8</button>
+                            <button class="btn">9</button>
+                        </div>
+                        <div class="row">
+                            <button class="btn">4</button>
+                            <button class="btn">5</button>
+                            <button class="btn">6</button>
+                        </div>
+                        <div class="row">
+                            <button class="btn">1</button>
+                            <button class="btn">2</button>
+                            <button class="btn">3</button>
+                        </div>
+                        <div class="row">
+                            <button class="btn">0</button>
+                            <button class="btn dot">.</button>
+                            <button class="btn">=</button>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="row">
+                            <button class="btn">/</button>
+                        </div>
+                        <div class="row">
+                            <button class="btn">x</button>
+                        </div>
+                        <div class="row">
+                            <button class="btn">-</button>
+                        </div>
+                        <button class="btn plus-sign">+</button>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <div class="footer-container">
+                <p class="full-text">A website made by Khalil ARCHKAK</p>
+                <p class="short-text">© Khalil Archkak</p>
+                <div class="socials">
+                    <a href="https://twitter.com/KhalilAr42" target="_blank"
+                        ><i class="fa-brands fa-x-twitter fa-xl social-icon"></i
+                    ></a>
+                    <a
+                        href="https://www.linkedin.com/in/khalilarchkak/"
+                        target="_blank"
+                        ><i
+                            class="fa-brands fa-linkedin-in fa-xl social-icon"
+                        ></i
+                    ></a>
+                    <a href="https://github.com/KhalilAr42" target="_blank"
+                        ><i class="fa-brands fa-github fa-xl social-icon"></i
+                    ></a>
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
