Handle divide by 0 case and refactor project.
Refactor handleclick function, still need some work to become
comprehensible by everyone, I also added handling of dividing by 0,
by showing a funny ascii emoji

--- a/index.html
+++ b/index.html
@@ -5,16 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
         <script src="script.js" defer></script>
-        <link
-            rel="icon"
-            href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧮</text></svg>"
-        />
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧮</text></svg>" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap"
-            rel="stylesheet"
-        />
+        <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet" />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -32,7 +26,7 @@
             <div class="calculator-container">
                 <div class="screen">
                     <div class="last-result" id="lastResult"></div>
-                    <div class="current-result" id="currentResult">0</div>
+                    <div class="current-result" id="currentResult"></div>
                 </div>
                 <div class="buttons-container">
                     <div class="col">
@@ -82,19 +76,9 @@
                 <p class="full-text">A website made by Khalil ARCHKAK</p>
                 <p class="short-text">© Khalil Archkak</p>
                 <div class="socials">
-                    <a href="https://twitter.com/KhalilAr42" target="_blank"
-                        ><i class="fa-brands fa-x-twitter fa-xl social-icon"></i
-                    ></a>
-                    <a
-                        href="https://www.linkedin.com/in/khalilarchkak/"
-                        target="_blank"
-                        ><i
-                            class="fa-brands fa-linkedin-in fa-xl social-icon"
-                        ></i
-                    ></a>
-                    <a href="https://github.com/KhalilAr42" target="_blank"
-                        ><i class="fa-brands fa-github fa-xl social-icon"></i
-                    ></a>
+                    <a href="https://twitter.com/KhalilAr42" target="_blank"><i class="fa-brands fa-x-twitter fa-xl social-icon"></i></a>
+                    <a href="https://www.linkedin.com/in/khalilarchkak/" target="_blank"><i class="fa-brands fa-linkedin-in fa-xl social-icon"></i></a>
+                    <a href="https://github.com/KhalilAr42" target="_blank"><i class="fa-brands fa-github fa-xl social-icon"></i></a>
                 </div>
             </div>
         </footer>
