--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <header>
             <h1>CALCULATOR</h1>
         </header>
+        <div class="error-message" id="errorMessage"></div>
         <main>
             <div class="calculator-container">
                 <div class="screen">
